# miningmodel

./: .gitignore  app.py  pyproject.toml  streamlit_ui.py
conf/: variables.yaml
src/: _redirects  embeddings.py  model.py  vector_store.py
